--- a/css/app.css
+++ b/css/app.css
@@ -670,7 +670,7 @@ body#perkroulette-app .configuration>.perks {
     margin-bottom: 10px;
 }
 
-label[for="surv"], label[for="kill"] {
+label[for="surv"], label[for="kill"], label[for="pckl"] {
     display: inline-block;
     width: calc(50% - 44px);
     padding: 5px 5px 5px 35px;
@@ -686,11 +686,11 @@ label[for="surv"], label[for="kill"] {
     background-size: 20px;
 }
 
-label[for="surv"]:hover, label[for="kill"]:hover {
+label[for="surv"]:hover, label[for="kill"], label[for="pckl"]:hover {
     background-color: #2b2b2b;
 }
 
-#surv:checked~.label_container label[for="surv"], #kill:checked~.label_container label[for="kill"] {
+#surv:checked~.label_container label[for="surv"], #kill:checked~.label_container label[for="kill"], #pckl:checked~.label_container label[for="pckl"] {
     background-image: url(img/icns/check-active.png);
     background-color: #222222;
 }
