--- a/css/app.css
+++ b/css/app.css
@@ -670,7 +670,7 @@ body#perkroulette-app .configuration>.perks {
     margin-bottom: 10px;
 }
 
-label[for="surv"], label[for="kill"], label[for="pckl"], label[for="pnsh"] {
+label[for="surv"], label[for="kill"], label[for="pckl"], label[for="tcsm"], label[for="pnsh"] {
     display: inline-block;
     width: calc(50% - 44px);
     padding: 5px 5px 5px 35px;
@@ -687,11 +687,11 @@ label[for="surv"], label[for="kill"], label[for="pckl"], label[for="pnsh"] {
     margin-bottom: 5px;
 }
 
-label[for="surv"]:hover, label[for="kill"], label[for="pckl"], label[for="pnsh"] {
+label[for="surv"]:hover, label[for="kill"], label[for="pckl"], label[for="tcsm"], label[for="pnsh"] {
     background-color: #2b2b2b;
 }
 
-#surv:checked~.label_container label[for="surv"], #kill:checked~.label_container label[for="kill"], #pckl:checked~.label_container label[for="pckl"], #pnsh:checked~.label_container label[for="pnsh"] {
+#surv:checked~.label_container label[for="surv"], #kill:checked~.label_container label[for="kill"], #pckl:checked~.label_container label[for="pckl"], #tcsm:checked~.label_container label[for="tcsm"], #pnsh:checked~.label_container label[for="pnsh"] {
     background-image: url(img/icns/check-active.png);
     background-color: #222222;
 }
